--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "travel_month d# \"January\""
+    "travel_month = Januar# \"January\""
    ]
   },
   {
